--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <article>
-        Hello word mi name is margarita
+        Hello word he conectado a un repositorio de GitHub, y entiendo la mitad de lo que hice.
     </article>
 </body>
 </html>
